# One-Eval

./: .dockerignore  .gitignore  Dockerfile  HOW_TO_REGISTER_METRIC.md  README.md  README_zh.md  docker-entrypoint.sh  my-changes.patch  nginx.conf  pyproject.toml  requirements.txt
.claude/skills/: one-eval
one-eval-skill/: .gitignore  SKILL.md
one-eval-skill/assets/: custom_metric.template.py  evalspec.template.yaml
one-eval-skill/references/: bench_gallery.md  external_bench.md  leaderboard_scores.json  metric_registry.md  report_template.md
one-eval-skill/scripts/: _common.py  build_gallery_md.py  doctor.py  make_plots.py  render_report.py  run_eval.py  run_metrics.py
one-eval-web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.js  vite.config.ts
one-eval-web/scripts/: ensure-rollup-native.cjs
one-eval-web/src/: App.tsx
one-eval-web/src/components/layout/: Layout.tsx  Sidebar.tsx
one-eval-web/src/pages/: Eval.tsx  EvalComponents.tsx  Gallery.tsx  Home.tsx  ReportComponents.tsx  Settings.tsx
one_eval/: logger.py
one_eval/agents/: bench_name_suggest_agent.py  bench_resolve_agent.py  bench_search_agent.py  metric_recommend_agent.py  report_gen_agent.py  score_calc_agent.py
one_eval/core/: agent.py  graph.py  metric_registry.py  state.py
one_eval/graph/: workflow.py  workflow_all.py  workflow_bench_gallery.py  workflow_download.py  workflow_eval.py  workflow_nl2bench.py
one_eval/metrics/: config.py  core.py  dispatcher.py  prompt_generator.py  registry.py  runner.py
one_eval/metrics/common/: analysis.py  classification.py  code.py  general.py  math_verify.py  sql.py  symbolic.py  text_gen.py
one_eval/metrics/lib/: basic.py  choice.py  diagnostic.py  numerical.py
one_eval/nodes/: bench_name_suggest_node.py  dataflow_eval_node.py  dataset_keys_node.py  download_node.py  interrupt_node.py  metric_recommend_node.py  pre_eval_review_node.py  query_understand_node.py
one_eval/runtime/: progress_store.py
one_eval/server/: app.py
one_eval/server/_data/: config.json
one_eval/serving/: custom_llm_caller.py
one_eval/toolkits/: dataflow_eval_tool.py  hf_download_tool.py  hf_search_tool.py
one_eval/utils/: bench_registry.py  deal_json.py  extractor.py  metric_registry.py  prompts.py  validators.py
one_eval/utils/bench_table/: BenchmarkTable.xlsx  bench_config.json  bench_gallery.json
tests/: test_api_model_config.py  test_bench_registry.py  test_ckpt.py  test_download_single.py  test_hf.py  test_interrupt.py  test_panmingh.py  test_single_tool.py  test_workflow_score_calc.py
