[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "one-eval"
description = "A evaluation framework for LLM models"
version = "0.0.0"
authors = [
    { name = "scuuy", email = "scuuy05@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

dependencies = [
    # Core AI & Agent Framework
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.0.0",

    # Data Processing & HuggingFace
    "huggingface-hub>=0.20.0",
    "datasets>=2.16.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # ML / Metrics
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.3.0",

    # LLM Client
    "openai>=1.0.0",

    # Web / Server
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",

    # Utilities
    "tqdm>=4.65.0",
    "word2number>=1.1",
]

[project.optional-dependencies]
# Local model serving (requires matching CUDA version)
vllm = ["vllm>=0.3.0"]

[project.urls]
"Homepage" = "https://github.com/OpenDCAI/One-Eval"
"Issues" = "https://github.com/OpenDCAI/One-Eval/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["one_eval*"]
